Split tables, query for valid minted tokens, display in dex section of FE
