# mine-diamonds/state-transition/src/stf/v1/types.ts
@@ -1,4 +1,9 @@
-export type ParsedSubmittedInput = InvalidInput | JoinWorldInput | SubmitMineAttemptInput;
+export type ParsedSubmittedInput =
+  | InvalidInput
+  | JoinWorldInput
+  | SubmitMineAttemptInput
+  | OrderCreatedInput
+  | AssetMintedInput;
 
 export interface InvalidInput {
   input: 'invalidString';
@@ -10,4 +15,18 @@ export interface JoinWorldInput {
 
 export interface SubmitMineAttemptInput {
   input: 'submitMineAttempt';
+}
+
+export interface OrderCreatedInput {
+  input: 'orderCreated';
+}
+
+export interface AssetMintedInput {
+  input: 'assetMinted';
+  payload: {
+    tokenId: number;
+    minter: string;
+    userTokenId: number;
+    value: number;
+  };
 }
